tests/snapshots/integration__param_fn_test__param_fn_args_dup_dashdash1.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args cmd_preferred -f -o 4 -- abc

OUTPUT
argc_flag1=1
argc_opt1=4
argc_arg1=( abc )
argc__dashdash=( 0 )
argc__args=( abc )
argc__line='cmd_preferred -f -o 4 -- abc'
argc__words=( spec cmd_preferred -f -o 4 -- abc )
_fn_args abc;exit;

