tests/snapshots/integration__param_fn_test__param_fn_args_dup_dashdash2.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args cmd_preferred -f -o 4 abc --

STDOUT
argc__line='cmd_preferred -f -o 4 abc --'
argc__words=( cmd_preferred -f -o 4 abc -- )
argc_flag1=1
argc_opt1=4
argc__dashdash=1
argc__args=( abc )
_fn_args abc;exit;

STDERR


