tests/snapshots/integration__param_fn_test__param_fn_args_dup_option.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args cmd_preferred -f -o 4 -o 5

OUTPUT
argc__line='cmd_preferred -f -o 4 -o 5'
argc__words=( cmd_preferred -f -o 4 -o 5 )
argc_flag1=1
argc__args=(  )
_fn_args;exit;

