tests/snapshots/integration__param_fn_test__param_fn_args_nontmatch_subcommand.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args cmd_prefer

OUTPUT
argc__line=cmd_prefer
argc__words=( cmd_prefer )
_fn_args;exit;

