tests/snapshots/integration__param_fn_test__param_fn_args_unknown_option.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args cmd_preferred -f -o 4 -x

STDOUT
argc__line=cmd_preferred\ -f\ -o\ 4\ -x
argc__words=( cmd_preferred -f -o 4 -x )
argc_flag1=1
argc_opt1=4
argc__args=(  )
_fn_args;exit;

STDERR


