tests/snapshots/integration__param_fn_test__param_fn_space.snap
---
source: tests/param_fn_test.rs
expression: output
---
RUN
spec _fn_args  

STDOUT
argc__line=' '
argc__words=( ' ' )
_fn_args;exit;

STDERR


